--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "jobportal-zeta-three.vercel.app",
+  "start_url": "https://jobportal-pink.vercel.app",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
